--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.jakewharton</groupId>
 	<artifactId>hanselandgretel-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.2</version>
+	<version>1.0.3</version>
 
 	<name>Hansel And Gretel (Parent)</name>
 	<description>Android library providing bread crumbs for compatibility fragments.</description>
@@ -20,9 +20,10 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<modules>
-		<module>library</module>
+        <module>deployer</module>
+        <module>library</module>
 		<module>sample</module>
-	</modules>
+    </modules>
 
 	<scm>
 		<url>http://github.com/JakeWharton/HanselAndGretel/</url>
@@ -64,19 +65,18 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 		<java.version>1.6</java.version>
-		<android.version>1.6_r2</android.version>
-		<android.platform>4</android.platform>
-		<android-support.version>r7</android-support.version>
+		<android.version>4.2_r1</android.version>
+		<android.platform>17</android.platform>
+		<android-support.version>r13</android-support.version>
 
-		<android-maven.version>3.3.0</android-maven.version>
+		<android-maven.version>3.6.0</android-maven.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.google.android</groupId>
+				<groupId>android</groupId>
 				<artifactId>android</artifactId>
 				<version>${android.version}</version>
 			</dependency>
